fixed modal-form position.
when opening modal-form as popup-partner from another modal-form, the second modal-form is hidden under first modal-form

--- a/web-client/src/main/webapp/static/css/gwt/form/layout/layout.css
+++ b/web-client/src/main/webapp/static/css/gwt/form/layout/layout.css
@@ -235,7 +235,7 @@
 .root-layout-panel {
     z-index: 0 !important;
 }
-.modal-form.popup-partner {
+.modal-form {
     /* actually needed only for bootstrap because it has no position, but for z-index position should be different from static */
     position: fixed;
 }
